@@ -1,5 +1,5 @@
 #
-# "$Id: cupsd.conf,v 1.35 2001/07/25 21:03:32 mike Exp $"
+# "$Id: cupsd.conf,v 1.36 2001/09/14 16:52:05 mike Exp $"
 #
 #   Sample configuration file for the Common UNIX Printing System (CUPS)
 #   scheduler.
@@ -196,10 +196,10 @@ LogLevel info
 
 #
 # MaxJobs: maximum number of jobs to keep in memory (active and completed.)
-# Default is 0 (no limit.)
+# Default is 500; the value 0 is used for no limit.
 #
 
-#MaxJobs 0
+#MaxJobs 500
 
 #
 # Printcap: the name of the printcap file.  Default is /etc/printcap.
@@ -696,5 +696,5 @@ Allow From 127.0.0.1
 </Location>
 
 #
-# End of "$Id: cupsd.conf,v 1.35 2001/07/25 21:03:32 mike Exp $".
+# End of "$Id: cupsd.conf,v 1.36 2001/09/14 16:52:05 mike Exp $".
 #
